// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/rollup.js code splitting should ouput only 1 JSON file 1`] = `
Array [
  Object {
    "file": "common.css",
    "text": "/* fixtures/simple.css */
.fooga {
    color: red;
}
",
  },
  Object {
    "file": "dependencies.css",
    "text": "/* fixtures/dependencies.css */
.wooga {

    background: blue;
}
",
  },
  Object {
    "file": "exports.json",
    "text": "{
    \\"fixtures/dependencies.css\\": {
        \\"wooga\\": \\"fooga wooga\\"
    },
    \\"fixtures/simple.css\\": {
        \\"str\\": \\"\\\\\\"string\\\\\\"\\",
        \\"fooga\\": \\"fooga\\"
    }
}",
  },
]
`;

exports[`/rollup.js code splitting should support dynamic imports 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* fixtures/dynamic-imports/a.css */
.a {

    color: aqua;
}
",
  },
  Object {
    "file": "b.css",
    "text": "/* fixtures/dynamic-imports/b.css */
.b {
    color: blue;
}
",
  },
  Object {
    "file": "c.css",
    "text": "/* fixtures/dynamic-imports/c.css */
.c {
    
    color: cyan;
}
",
  },
  Object {
    "file": "common.css",
    "text": "/* fixtures/dynamic-imports/d.css */
.d {
    color: darkred;
}
",
  },
]
`;

exports[`/rollup.js code splitting should support manual chunks 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* fixtures/manual-chunks/a.css */
.a {

    color: red;
}
",
  },
  Object {
    "file": "b.css",
    "text": "/* fixtures/manual-chunks/b.css */
.b {

    color: blue;
}
",
  },
  Object {
    "file": "common.css",
    "text": "/* fixtures/manual-chunks/d.css */
/* fixtures/manual-chunks/c.css */
.c {
    color: green;
    background: darkred;
}
",
  },
]
`;

exports[`/rollup.js code splitting should support splitting up CSS files 1`] = `
Array [
  Object {
    "file": "common.css",
    "text": "/* fixtures/simple.css */
.fooga {
    color: red;
}
",
  },
  Object {
    "file": "dependencies.css",
    "text": "/* fixtures/dependencies.css */
.wooga {

    background: blue;
}
",
  },
]
`;

exports[`/rollup.js code splitting should support splitting up CSS files w/ shared assets 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* fixtures/css-chunks/a.css */
.a {

    color: aqua;
}
",
  },
  Object {
    "file": "b.css",
    "text": "/* fixtures/css-chunks/b.css */
.b {
    
    color: blue;
}
",
  },
  Object {
    "file": "chunk.css",
    "text": "/* fixtures/css-chunks/c.css */
.c {

    color: cyan;
}
",
  },
  Object {
    "file": "common.css",
    "text": "/* fixtures/css-chunks/shared.css */
.shared {
    color: snow;
}
",
  },
]
`;

exports[`/rollup.js code splitting shouldn't put bundle-specific CSS in common.css 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* fixtures/common-splitting/shared.css */
.shared {
    color: snow;
}
/* fixtures/common-splitting/a.css */
.a {

    color: aqua;
}
/* fixtures/common-splitting/b.css */
.b {

    color: blue;
}
",
  },
  Object {
    "file": "c.css",
    "text": "/* fixtures/common-splitting/c.css */
.c {
    color: cyan;
}
",
  },
]
`;
